# gpui-window-template

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
debian/: gpui-test.desktop
src/: assets.rs  components.rs  main.rs  window.rs
src/pages/: home.rs  mod.rs  other_page.rs
